--- a/android/app/src/main/res/xml/music_preferences.xml
+++ b/android/app/src/main/res/xml/music_preferences.xml
@@ -1,8 +1,8 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <EditTextPreference
-        app:key="signature"
-        app:title="@string/signature_title"
+    <ListPreference
+        app:key="preferred_music_service"
+        app:title="@string/preferred_music_service"
         app:useSimpleSummaryProvider="true" />
 
     <ListPreference
